removed functions feature to test

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
             'auth', 
             'database', 
             'firestore',
-            'functions',
+            // 'functions',
             'messaging', 
             'storage', 
             'analytics', 
