--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <script defer src="/__/firebase/11.2.0/firebase-functions-compat.js"></script>
     <script defer src="/__/firebase/11.2.0/firebase-messaging-compat.js"></script>
     <script defer src="/__/firebase/11.2.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/11.2.0/firebase-analytics-compat.js"></script>
+    <!-- <script defer src="/__/firebase/11.2.0/firebase-analytics-compat.js"></script> -->
     <script defer src="/__/firebase/11.2.0/firebase-remote-config-compat.js"></script>
     <script defer src="/__/firebase/11.2.0/firebase-performance-compat.js"></script>
     <!-- 
